# vasp-interactive

./: README.md  pyproject.toml
vasp_interactive/: ase_plugin.py
